feat(post): wip - add post about create a blog on github

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     <section class="about">
       {% for author in site.authors %}
       <img src="{{ author.image }}" alt="{{ author.name }}" />
-      <h2 id="title">
+      <h2 class="author">
         {{ author.name }}
       </h2>
       <p class="tagline">{{ author.tagline }}</p>
