--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -7,8 +7,12 @@ layout: default
     <h2 class="post-title">{{ page.title | escape }}</h2>
   </a>
   <div class="post-info-container">
-    <div class="post-info">Write by: {{ page.author }}</div>
-    <div class="post-info">Reviewed by: {{ page.reviewer }}</div>
+    <div class="post-info">
+      Writer <div class="author">{{ page.author }}</div>
+    </div>
+    <div class="post-info textRight">
+      Reviewer <div class="author">{{ page.reviewer }}</div>
+    </div>
   </div>
   <div class="post-meta">
     <ul class="post-categories">
