--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -50,17 +50,17 @@
       {{ content }}
     </section>
   </main>
-  {%- if site.plainwhite.analytics_id -%}
-  <script async src="https://www.googletagmanager.com/gtag/js?id={{ site.plainwhite.analytics_id }}"></script>
+  {%- if site.analytics_id -%}
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id={{site.analytics_id}}"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag() {
-      dataLayer.push(arguments);
-    }
-    gtag("js", new Date());
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
 
-    gtag("config", "{{ site.plainwhite.analytics_id }}");
+    gtag('config', '{{site.analytics_id}}');
   </script>
+
   {%- endif -%}
 </body>
 
