--- a/_sass/_syntax.scss
+++ b/_sass/_syntax.scss
@@ -1,14 +1,34 @@
-@import 'ext/solarized-light';
+@import "ext/solarized-light";
 
 .highlight {
-	background-color: #f4f4f4;
+  background-color: #f4f4f4;
 }
 
 div.highlight {
-	padding: 5px 20px;
+  padding: 5px 20px;
 }
-pre.highlight, code {
-	font-family: 'Consolas', Menlo, monospace;
-	line-height: 1.4em;
-	tab-size: 4;
+pre.highlight,
+code {
+  font-family: "Consolas", Menlo, monospace;
+  line-height: 1.4em;
+  tab-size: 4;
+}
+
+blockquote {
+  background: #f9f9f9;
+  border-left: 10px solid #ccc;
+  margin: 1.5em 10px;
+  padding: 0.5em 10px;
+  quotes: "\201C""\201D";
+}
+blockquote:before {
+  color: #ccc;
+  //   content: "";
+  //   font-size: 4em;
+  //   line-height: 0.1em;
+  //   margin-right: 0.25em;
+  //   vertical-align: -0.4em;
+}
+blockquote p {
+  display: inline;
 }
