chore(layout): styles, favicon

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,9 @@
 <body>
   <main class="container">
     <section class="about">
+      <a href="/">
+        <img src="/assets//logo.png" alt="logo" style="width: 100px; margin-bottom: 50px; margin-top:45px;" />
+      </a>
       {% for author in site.authors %}
       <img src="{{ author.image }}" alt="{{ author.name }}" />
       <h2 class="author">
