--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -75,7 +75,7 @@ main {
   .about {
     display: flex;
     height: 100vh;
-    padding-bottom: 15vh;
+    // padding-bottom: 15vh;
     @media screen and (max-width: $mobileW) {
       height: auto;
       padding: 10vh 0;
@@ -84,31 +84,33 @@ main {
       position: fixed;
     }
     min-width: $leftWidth;
-    justify-content: center;
+    // justify-content: center;
     flex-direction: column;
     align-items: center;
     h2 {
-      font-size: 22px;
-      margin-top: 25px;
+      font-size: 20px;
+      margin-top: 18px;
       margin-bottom: 0;
       color: #222222;
       font-weight: normal;
     }
     .tagline {
-      font-size: 22px;
-      margin-top: 17px;
+      font-size: 18px;
+      margin-top: 8px;
+      margin-bottom: 8px;
       color: #aaa;
       white-space: pre-wrap;
       line-height: normal;
     }
     img {
       max-width: 150px;
+      border-radius: 50%;
     }
   }
 }
 .author {
   &::first-letter {
-    font-size: 150%;
+    // font-size: 150%;
     // color: #8a2be2;
   }
   a {
@@ -119,6 +121,7 @@ main {
   list-style-type: none;
   padding: 0;
   margin-top: 0;
+  margin-bottom: 45px;
   li {
     float: left;
     i {
