--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -1,6 +1,11 @@
 @import "ext/fonts";
-@import "ext/normalize";
 @import "syntax";
+@import "sidebar";
+@import "menu";
+
+* {
+  margin: 0;
+}
 
 $linkColor: #0a59b0;
 $mobileW: 768px;
@@ -40,123 +45,6 @@ a {
 
 h2 {
   margin: 0.7em 0;
-}
-main {
-  margin: 0 90px;
-  display: flex;
-  height: 100%;
-
-  @media screen and (min-width: $bigScreenW) {
-    margin: 0 auto;
-    max-width: 1440px;
-  }
-  @media screen and (max-width: 1280px) {
-    margin: 0 75px;
-  }
-  @media screen and (max-width: 1024px) {
-    margin: 0 35px;
-  }
-
-  @media screen and (max-width: $mobileW) {
-    margin: 0 10px;
-    flex-direction: column;
-  }
-  @media screen and (max-width: $smallMobileW) {
-    margin: 0;
-  }
-
-  .content {
-    @media screen and (min-width: $mobileW + 1) {
-      max-width: calc(100% - #{$leftWidth});
-      margin-left: $leftWidth;
-      width: 100%;
-    }
-  }
-  .about {
-    display: flex;
-    height: 100vh;
-    // padding-bottom: 15vh;
-    @media screen and (max-width: $mobileW) {
-      height: auto;
-      padding: 10vh 0;
-    }
-    @media screen and (min-width: $mobileW + 1) {
-      position: fixed;
-    }
-    min-width: $leftWidth;
-    // justify-content: center;
-    flex-direction: column;
-    align-items: center;
-    h2 {
-      font-size: 20px;
-      margin-top: 18px;
-      margin-bottom: 0;
-      color: #222222;
-      font-weight: normal;
-    }
-    .tagline {
-      font-size: 18px;
-      margin-top: 8px;
-      margin-bottom: 8px;
-      color: #aaa;
-      white-space: pre-wrap;
-      line-height: normal;
-    }
-    img {
-      max-width: 150px;
-      border-radius: 50%;
-    }
-  }
-}
-.author {
-  &::first-letter {
-    // font-size: 150%;
-    // color: #8a2be2;
-  }
-  a {
-    text-decoration: none;
-  }
-}
-.social {
-  list-style-type: none;
-  padding: 0;
-  margin-top: 0;
-  margin-bottom: 45px;
-  li {
-    float: left;
-    i {
-      font-size: 34px;
-    }
-  }
-}
-
-.navigation {
-  width: 80%;
-
-  ul {
-    list-style-type: none;
-    padding: 0;
-    margin-top: 0;
-
-    li:last-child {
-      a {
-        border-bottom: 0;
-      }
-    }
-
-    a {
-      display: block;
-      font-family: "Raleway";
-      text-align: center;
-      padding: 1rem 0;
-      text-decoration: none;
-      border-bottom: 1px solid #ececec;
-
-      @media screen and (max-width: $mobileW) {
-        padding: 2rem 0;
-      }
-    }
-  }
 }
 
 .post-wrapper {
@@ -220,20 +108,16 @@ main {
 }
 .posts,
 .post-container {
+  padding-top: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
   list-style-type: none;
-  margin: 45px 30px;
-  @media screen and (max-width: $smallMobileW) {
-    margin-left: 20px;
-    margin-right: 20px;
-  }
-  @media screen and (max-width: $mobileW) {
-    padding: 0 !important;
-    margin-top: 0;
+  @media screen and (max-width: 768px) {
+    padding-top: 0px;
+    max-width: calc(100vw);
   }
 }
-.post-container {
-  padding-left: 30px;
-}
+
 .post {
   font-family: "Montserrat", sans-serif;
   font-weight: 300;
@@ -275,6 +159,7 @@ main {
   display: block;
   border: 1px double black;
   max-width: 800px;
+  width: 90%;
   margin: auto;
 }
 .box {
